adjust CatalogOverlayComponent scss to avoid text overlap

--- a/src/components/CatalogOverlay/CatalogOverlayComponent.scss
+++ b/src/components/CatalogOverlay/CatalogOverlayComponent.scss
@@ -210,6 +210,7 @@
             }
             
             .catalog-type-button {
+                margin-left: -20px;
                 width: 140px;
                 height: 30px;
                 .bp3-popover-target {
@@ -223,7 +224,7 @@
 
             .catalog-xaxis {
                 margin-left: 10px;
-                width: 120px;
+                width: 130px;
                 .catalog-xaxis-select {
                     .catalog-xaxis-button {
                         width: 90px;
@@ -237,7 +238,7 @@
             }
 
             .catalog-yaxis {
-                margin-left: 5px;
+                margin-left: 15px;
                 width: 130px;
                 .catalog-yaxis-select {
                     .catalog-yaxis-button {
